revise consents and orgs UIs to tailor to the needs for Eproms and Truenth

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -74,6 +74,10 @@ body {
   -webkit-transition: visibility 0.5s ease-in;
   transition: visibility 0.5s ease-in;
 }
+
+#adminTable {
+  transition: all 0.5s ease-in;
+}
 .save-info {
   opacity: 0;
   -webkit-transition: opacity 0.8s ease-in;
@@ -245,7 +249,8 @@ transform(-1000px, 0);*/
   display: none;
 }
 #patientAssessmentDownload {
-  padding: 0.6em;
+  padding: 0.65em;
+  font-size: 1.1em;
 }
 #patientsInstrumentList div.checkbox label {
   font-size: 0.8em;
@@ -650,15 +655,17 @@ a.btn {
 #userOrgs label :first-of-type {
   margin-bottom: 0.5em;
 }
+
 #fillOrgs legend {
-  font-size: 0.9em;
+  font-size: 0.92em;
   color: #595F57;
   margin: 4px 0 4px 0;
 }
 #fillOrgs,
 .noOrg-container {
-  font-size: 0.99em;
+  font-size: 0.95em;
 }
+
 input.clinic {
   margin-top: 6px;
 }
@@ -834,8 +841,6 @@ table.profile-audit-log TH,
 #loadingIndicator {
   /*display: none;*/
   position: fixed;
-  /*top: 200px;
-  left: 48%;*/
   top: 0;
   left: 0;
   right: 0;
@@ -843,19 +848,11 @@ table.profile-audit-log TH,
   height: 2em;
   width: 2em;
   overflow: show;
-  /*margin-left: -50px;*/
-  /*width: 100px;
-  height: 100px;*/
   font-size: 1em;
   text-align: center;
   z-index: 99999;
   color: #444;
   margin: auto;
-  /*-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
-  filter: alpha(opacity=80);
-  -moz-opacity: 0.8;
-  -khtml-opacity: 0.8;
-  opacity: 0.8;*/
 }
 #loadingIndicator:before {
   content: ' ';
@@ -967,14 +964,6 @@ table.profile-audit-log TH,
     transform: rotate(360deg);
   }
 }
-/*********
-.loading {
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
-  filter: alpha(opacity=40);
-  -moz-opacity: 0.4;
-  -khtml-opacity: 0.4;
-  opacity: 0.4;
-}*********/
 .side {
   height: 26em;
 }
@@ -1169,10 +1158,32 @@ a.btn-delete {
 div.input-group.date {
   margin-top: -2px;
 }
-
-.indent {
-  padding: 0 1em;
+div.org-container legend {
+  color: #474848;
 }
+div.org-container label.org-label{
+  margin: 0;
+}
+
+div.org-container .text-muter {
+  margin-bottom: 4px;
+  margin-top:4px;
+  font-size: 0.97em;
+  color: #989696;
+}
+div.org-container input[type="checkbox"] {
+  position:relative;
+  top:-1px;
+  right:4px;
+}
+#fillOrgs .divider {
+  display:block;
+  height:0.25em;
+}
+.indent {
+  padding: 0 1.4em;
+}
+
 /** Responsive sizes **/
 @media (max-width: 480px) {
   #footerLockup {
@@ -1318,10 +1329,16 @@ div.input-group.date {
   button.btn-delete-consent {
     padding: 2px;
   }
+  #adminTable .email-field {
+    display: none;
+  }
 }
-@media (max-width: 730) {
+@media (max-width: 730px) {
   #userSessionsList {
     font-size: 0.9em;
+  }
+  #adminTable .status-field, #adminTable .reports-field {
+    display: none;
   }
 }
 @media (min-width: 768px) {
@@ -1378,6 +1395,9 @@ div.input-group.date {
   }
   .load-container {
     min-height: 1.5em;
+  }
+  #adminTable .consentdate-field {
+    display: none;
   }
 }
 @media (min-width: 992px) {
@@ -1446,6 +1466,9 @@ div.input-group.date {
 }
 @media (max-width: 1199px) {
   .profile-img {
+    display: none;
+  }
+  #adminTable .organization-field {
     display: none;
   }
 }
