--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -50,6 +50,9 @@ a.btn {
   -webkit-transition: visibility 0.5s ease-in;
   transition: visibility 0.5s ease-in;
 }
+#adminTable {
+  transition: all 0.5s ease-in;
+}
 #loginEmailReminderText {
   margin-left: 8px;
   font-size: 0.87em;
@@ -228,7 +231,8 @@ transform(-1000px, 0);*/
   display: none;
 }
 #patientAssessmentDownload {
-  padding: 0.6em;
+  padding: 0.65em;
+  font-size: 1.1em;
 }
 #patientsInstrumentList div.checkbox label {
   font-size: 0.8em;
@@ -621,13 +625,13 @@ btn {
   font-size: 0.99em;
 }
 #fillOrgs legend {
-  font-size: 0.95em;
+  font-size: 0.92em;
   color: #595F57;
   margin-bottom: 0;
 }
 #fillOrgs,
 .noOrg-container {
-  font-size: 0.99em;
+  font-size: 0.95em;
 }
 input.clinic {
   margin-top: 6px;
@@ -797,8 +801,6 @@ table.profile-audit-log TH,
 #loadingIndicator {
   /*display: none;*/
   position: fixed;
-  /*top: 200px;
-  left: 48%;*/
   top: 0;
   left: 0;
   right: 0;
@@ -806,19 +808,11 @@ table.profile-audit-log TH,
   height: 2em;
   width: 2em;
   overflow: show;
-  /*margin-left: -50px;*/
-  /*width: 100px;
-  height: 100px;*/
   font-size: 1em;
   text-align: center;
   z-index: 99999;
   color: #444;
   margin: auto;
-  /*-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
-  filter: alpha(opacity=80);
-  -moz-opacity: 0.8;
-  -khtml-opacity: 0.8;
-  opacity: 0.8;*/
 }
 #loadingIndicator:before {
   content: ' ';
@@ -930,14 +924,6 @@ table.profile-audit-log TH,
     transform: rotate(360deg);
   }
 }
-/*********
-.loading {
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
-  filter: alpha(opacity=40);
-  -moz-opacity: 0.4;
-  -khtml-opacity: 0.4;
-  opacity: 0.4;
-}*********/
 .side {
   height: 26em;
 }
@@ -1130,6 +1116,27 @@ a.btn-delete {
 div.input-group.date {
   margin-top: -2px;
 }
+div.org-container legend {
+  color: #474848;
+}
+div.org-container label.org-label{
+  margin: 0;
+}
+div.org-container .text-muter {
+  margin-bottom: 4px;
+  margin-top:4px;
+  font-size: 0.97em;
+  color: #989696;
+}
+div.org-container input[type="checkbox"] {
+  position:relative;
+  top:-1px;
+  right:4px;
+}
+#fillOrgs .divider {
+  display:block;
+  height:0.25em;
+}
 #profileProcedureContainer #tnthproc {
   max-width: 95%;
 }
@@ -1291,10 +1298,16 @@ div.input-group.date {
   button.btn-delete-consent {
     padding: 2px;
   }
+  #adminTable .email-field {
+    display: none;
+  }
 }
-@media (max-width: 730) {
+@media (max-width: 730px) {
   #userSessionsList {
     font-size: 0.9em;
+  }
+  #adminTable .status-field, #adminTable .reports-field {
+    display: none;
   }
 }
 @media (min-width: 768px) {
@@ -1351,6 +1364,9 @@ div.input-group.date {
   }
   .load-container {
     min-height: 1.5em;
+  }
+  #adminTable .consentdate-field {
+    display: none;
   }
 }
 @media (min-width: 992px) {
@@ -1414,6 +1430,9 @@ div.input-group.date {
 }
 @media (max-width: 1199px) {
   .profile-img {
+    display: none;
+  }
+  #adminTable .organization-field {
     display: none;
   }
 }
